# TWSE-Tick-Data

./: .env.example  .gitignore  FIX_TOO_MANY_OPEN_FILES.md  Makefile  README.md  README_data_v2.md  README_data_v3.md  Todo.md  data.py  data_v2.py  data_v3.py  demo_streaming.py  main.cpp  main.rs  nautilus.py  process_snapshot.py  requirements.txt  requirements_freeze.txt  test_data_v2.py  test_data_v3.py  twse_tick.hpp
CompressTest/: README.md  demo_flattened.parquet  demo_flattened_corrected.parquet  gzip.ipynb  read_fixed_width_file.ipynb  read_fixed_width_file_demo.ipynb
FinLab/: README.md  finlab_test.py
Fugle/: previous_close.ipynb  previous_close_demo.ipynb
NautilusTrader/: .gitignore  CATALOG_GUIDE.md  COMPRESSION_CHANGES.md  COMPRESSION_SUMMARY.md  IMPLEMENTATION_NOTES.md  README.md  ZSTD_SUPPORT.md  convert_to_catalog.py  convert_to_catalog_direct.py  convert_to_feather_by_date.py  demo_adapter.py  demo_backtest.py  demo_output.txt  demo_simple_adapter.py  pyproject.toml  query_catalog_example.py  query_feather_example.py  quick_data.sh  test_compression_complete.py  twse_data_loader.py  twse_snapshot_data.py
NautilusTrader/docs/: AdapterPattern.md  CompressionAnalysis.md  CompressionQuickStart.md  CustomData.md  OldReadme.md
NautilusTrader/twse_adapter/: __init__.py  data.py  providers.py
Notes/: NautilusTrader.md  metadata.ipynb
YFinance/: README.md  tw_yf_sync.py
order/: README.md  README_new.md  nautilus_0050.csv  odr  odr_output.jsonl  order.csv  格式說明-H1-委託檔.docx  格式說明-H1-委託檔.docx(Effective on 3.23.2020).docx
snapshot/: README.md  Sample  (+12 more)
(+29 files in other folders)
