[project]
name = "nautilustrader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "nautilus-trader>=1.221.0",
    "pyarrow>=22.0.0",
    "backports-zstd>=1.0.0 ; python_full_version < '3.14'",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"

[dependency-groups]
dev = [
    "ipython>=9.7.0",
]
